Fixed an issue with the table-specific visibility classes

--- a/scss/foundation/components/_visibility.scss
+++ b/scss/foundation/components/_visibility.scss
@@ -198,7 +198,7 @@ $visibility-breakpoint-queries:
       #{$visibility-none-list} {
         display: none !important;
       }
-      @if $include-table-visibility-classes != false {
+      @if $include-table-visibility-classes == false {
         #{$visibility-table-list} {
           display: table;
         }
